# kidsnote-backup

./: .gitignore  CHANGELOG.md  Cargo.toml  Readme.md  package-lock.json  package.json
.github/workflows/: release_tags.yml
knbackup/: Cargo.toml
knbackup/src/: logger.rs  main.rs
knbackup/src/command/: auth.rs  download.rs  login.rs  mod.rs
knbackup/src/kidsnote/: mod.rs
lib/kidsnote-sdk/: Cargo.toml
lib/kidsnote-sdk/src/: common.rs  lib.rs  options.rs
lib/kidsnote-sdk/src/auth/: datatypes.rs  error_types.rs  mod.rs
lib/kidsnote-sdk/src/child/: datatypes.rs  mod.rs
lib/kidsnote-sdk/src/resource/: datatypes.rs  mod.rs
lib/kidsnote-sdk/src/tests/: mod.rs
lib/kidsnote-sdk/src/tests/tool/: image_tool_test.rs  mod.rs
lib/kidsnote-sdk/src/tool/: image_tool.rs  mod.rs
lib/kidsnote-sdk/src/user/: datatypes.rs  mod.rs
