[package]
name = "knbackup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version="0.4.31", features = ["serde"] }
clap = { version="4.4.11", features=["derive", "env"]}
futures = "0.3.30"
kidsnote-sdk = { path = "../lib/kidsnote-sdk" }
tokio = {version = "1.35.1", features = ["full"]}
