[package]
name = "knbackup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version="0.4.31", features = ["serde"] }
clap = { version="4.4.11", features=["derive", "env"]}
dirs = "5.0.1"
env_logger = "0.10.1"
filetime = "0.2.23"
kidsnote-sdk = { path = "../lib/kidsnote-sdk" }
log = "0.4.20"
log4rs = "1.2.0"
reqwest = "0.11.23"
serde = "1"
tokio = {version = "1.35.1", features = ["full"]}
toml = "0.8.8"
