[package]
name = "kidsnote-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version="0.4.31", features = ["serde"] }
num_enum = "0.7.1"
reqwest = { version="0.11.23", features=["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_urlencoded = "0.7.1"
simd-json = "0.13.4"
thiserror = "1.0.52"
